# customer-segmentation-using-retail-data

./: README.md  jupyter.ipynb  pyproject.toml
